--- a/CoreProject/Views/Home/Index.cshtml
+++ b/CoreProject/Views/Home/Index.cshtml
@@ -1,19 +1,75 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div class="container-fluid pt-6 px-5">
-    <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-        <h1 class="display-5 mb-0">What We Offer</h1>
+
+<div class="col-12-text-left">
+    <button class="accordion-button">
+        <span> İstanbul </span>
+        <br />
+        <h2 class="font-bold"> 16'C' </h2>
+    </button>
+</div>
+
+<div class="row g-5">
+    <div class="col-lg-6">
+        <div class="blog-item">
+            <div class="position-relative overflow-hidden">
+                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+            </div>
+            <div class="bg-secondary d-flex">
+                <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
+                    <span></span>
+                    <h5 class="text-uppercase m-0"></h5>
+                    <span></span>
+                </div>
+                <div class="d-flex flex-column justify-content-center py-3 px-4">
+                    <div class="d-flex mb-2">
+                        <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin Girişi</small>
+                    </div>
+                    <a class="h4" href="">Admin Giriş Ekranı İçin Tıklayın</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="blog-item">
+            <div class="position-relative overflow-hidden">
+                <img class="img-fluid" src="img/blog-2.jpg" alt="">
+            </div>
+            <div class="bg-secondary d-flex">
+                <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
+                    <span></span>
+                    <h5 class="text-uppercase m-0"></h5>
+                    <span></span>
+                </div>
+                <div class="d-flex flex-column justify-content-center py-3 px-4">
+                    <div class="d-flex mb-2">
+                        <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Kullanıcı Girişi</small>
+                    </div>
+                    <a class="h4" href="">Kullanıcı Giriş Ekranı İçin Tıklayın</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br />
+<br />
+<div class="container-fluid py-1 px-1">
+    <div class="text-center mx-auto mb-1" style="max-width: 600px;">
+        <h1 class="display-5 mb-0">Son Blog Gönderileri</h1>
         <hr class="w-25 mx-auto bg-primary">
     </div>
+</div>
+<br />
+<div class="container-fluid pt-1 px-1">
     <div class="row g-5">
         <div class="col-lg-4 col-md-6">
             <div class="service-item bg-secondary text-center px-5">
                 <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                     <i class="fa fa-user-tie fa-2x"></i>
                 </div>
-                <h3 class="mb-3">Business Research</h3>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                <h3 class="mb-3">Atatürk ve Cumhuriyet Araştırmaları Bölümü</h3>
+                <p class="mb-0">Enstitü'nün birinci katındaki "Atatürk ve Cumhuriyet Araştırmaları Bölümü"nde, konuyla ilgili bilimsel yayınları içeren ana kitaplığın yanı sıra genel okuyucu kitlesine hizmet etmeyi amaçlayan bir İstanbul Kitaplığı ve bir referans kitaplığı bulunuyor.</p>
             </div>
         </div>
         <div class="col-lg-4 col-md-6">
@@ -21,8 +77,8 @@
                 <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                     <i class="fa fa-chart-pie fa-2x"></i>
                 </div>
-                <h3 class="mb-3">Stretagic Planning</h3>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                <h3 class="mb-3">“İstanbul ve Müzik” Araştırma Programı (İMAP)</h3>
+                <p class="mb-0">İstanbul Araştırmaları Enstitüsü, 2018 yılından itibaren, koordinatörlüğünü müzisyen ve araştırmacı Derya Türkan’ın üstlendiği “İstanbul ve Müzik” başlıklı bir araştırma programı  (İMAP) üzerine çalışmaya başlamıştır.</p>
             </div>
         </div>
         <div class="col-lg-4 col-md-6">
@@ -30,109 +86,15 @@
                 <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                     <i class="fa fa-chart-line fa-2x"></i>
                 </div>
-                <h3 class="mb-3">Market Analysis</h3>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="service-item bg-secondary text-center px-5">
-                <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                    <i class="fa fa-chart-area fa-2x"></i>
-                </div>
-                <h3 class="mb-3">Financial Analaysis</h3>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="service-item bg-secondary text-center px-5">
-                <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                    <i class="fa fa-balance-scale fa-2x"></i>
-                </div>
-                <h3 class="mb-3">legal Advisory</h3>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="service-item bg-secondary text-center px-5">
-                <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                    <i class="fa fa-house-damage fa-2x"></i>
-                </div>
-                <h3 class="mb-3">Tax & Insurance</h3>
-                <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                <h3 class="mb-3">Osmanlı Araştırmaları Bölümü</h3>
+                <p class="mb-0">"Osmanlı Araştırmaları Bölümü" ve Şevket Rado Yazma Kitaplığı'nın yer aldığı ikinci katta, modern Osmanlı çalışmalarını kapsayan bir kitaplığın yanı sıra, Şevket Rado koleksiyonuna ait bine yakın elyazmasından oluşan bir koleksiyon bulunuyor.</p>
             </div>
         </div>
     </div>
 </div>
-<div class="container-fluid py-6 px-5">
-    <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-        <h1 class="display-5 mb-0">Latest Blog Post</h1>
-        <hr class="w-25 mx-auto bg-primary">
-    </div>
-    <div class="row g-5">
-        <div class="col-lg-4">
-            <div class="blog-item">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
-                </div>
-                <div class="bg-secondary d-flex">
-                    <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                        <span>01</span>
-                        <h5 class="text-uppercase m-0">Jan</h5>
-                        <span>2045</span>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center py-3 px-4">
-                        <div class="d-flex mb-2">
-                            <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                            <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
-                        </div>
-                        <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="blog-item">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                </div>
-                <div class="bg-secondary d-flex">
-                    <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                        <span>01</span>
-                        <h5 class="text-uppercase m-0">Jan</h5>
-                        <span>2045</span>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center py-3 px-4">
-                        <div class="d-flex mb-2">
-                            <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                            <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
-                        </div>
-                        <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="blog-item">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                </div>
-                <div class="bg-secondary d-flex">
-                    <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                        <span>01</span>
-                        <h5 class="text-uppercase m-0">Jan</h5>
-                        <span>2045</span>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center py-3 px-4">
-                        <div class="d-flex mb-2">
-                            <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                            <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
-                        </div>
-                        <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<br />
+<br />
+<br />
+
 
 
