--- a/CoreProject/Views/Home/Index.cshtml
+++ b/CoreProject/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 <div class="col-12-text-left">
     <button class="accordion-button">
-        <span> İstanbul </span>
+        <span> İstanbul: </span>
         <br />
-        <h2 class="font-bold"> 16'C' </h2>
+        <h2 class="font-bold">@ViewBag.v1'C' </h2>
     </button>
 </div>
 
