--- a/CoreProject/Views/Home/Index.cshtml
+++ b/CoreProject/Views/Home/Index.cshtml
@@ -2,12 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="col-12-text-left">
-    <button class="accordion-button">
-        <span> İstanbul: </span>
-        <br />
-        <h2 class="font-bold">@ViewBag.v1'C' </h2>
-    </button>
+<div class="col-lg-3">
+    <div class="widget style1 navy-bg">
+        <div class="row" style="margin-left: 1350px;">
+            <div>
+                <i class="fa fa-cloud fa-5x"></i>
+            </div>
+            <div class="col-8text-right">
+                <span> İstanbul </span>
+                <h2 class="font-bold">@ViewBag.v1'C' </h2>
+            </div>
+            
+        </div>
+    </div>
 </div>
 
 <div class="row g-5">
