--- a/CoreProject/Views/Login/User.cshtml
+++ b/CoreProject/Views/Login/User.cshtml
@@ -6,7 +6,7 @@
 
 <section class="main-content-w3layouts-agileits">
     <div class="container">
-        <h3 class="tittle">Admin Oturum Aç</h3>
+        <h3 class="tittle"> Kullanıcı Oturum Aç</h3>
         <div class="row inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
                 <form method="post">
@@ -30,5 +30,3 @@
         </div>
     </div>
 </section>
-
-
