--- a/CoreProject/Views/Home/Index.cshtml
+++ b/CoreProject/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     <div class="d-flex mb-2">
                         <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin Girişi</small>
                     </div>
-                    <a class="h4" href="">Admin Giriş Ekranı İçin Tıklayın</a>
+                    <a class="h4" href="/Login/Index/">Admin Giriş Ekranı İçin Tıklayın</a>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
                     <div class="d-flex mb-2">
                         <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Kullanıcı Girişi</small>
                     </div>
-                    <a class="h4" href="">Kullanıcı Giriş Ekranı İçin Tıklayın</a>
+                    <a class="h4" href="/Login/User/">Kullanıcı Giriş Ekranı İçin Tıklayın</a>
                 </div>
             </div>
         </div>
