--- a/CoreProject/Views/Login/Index.cshtml
+++ b/CoreProject/Views/Login/Index.cshtml
@@ -13,7 +13,6 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1 mb-2">Mail Adresi</label>
                         <input type="email" class="form-control" name="WriterMail" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
-
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1 mb-2">Şifre</label>
@@ -24,7 +23,7 @@
                         <label class="form-check-label" for="exampleCheck1">Beni Hatırla </label>
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Giriş Yap</button>
-                    <p><a href="/Register/Index/"> Bir hesabın yok mu?</a></p>
+                    <p><a href="/RegisterAdmin/Index/"> Bir hesabın yok mu?</a></p>
                 </form>
             </div>
         </div>
