--- a/CoreProject/Views/Login/User.cshtml
+++ b/CoreProject/Views/Login/User.cshtml
@@ -6,14 +6,14 @@
 
 <section class="main-content-w3layouts-agileits">
     <div class="container">
-        <h3 class="tittle"> Kullanıcı Oturum Aç</h3>
+        <br />
+        <h3 class="tittle" style="margin-left: 450px;">Kullanıcı Oturum Açma Ekranı</h3>
         <div class="row inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
                 <form method="post">
                     <div class="form-group">
                         <label for="exampleInputEmail1 mb-2">Mail Adresi</label>
                         <input type="email" class="form-control" name="WriterMail" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
-
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1 mb-2">Şifre</label>
@@ -24,7 +24,7 @@
                         <label class="form-check-label" for="exampleCheck1">Beni Hatırla </label>
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Giriş Yap</button>
-                    <p><a href="/Register/Index/"> Bir hesabın yok mu?</a></p>
+                    <p><a href="@Url.Action("Index","RegisterUser")"> Bir hesabın yok mu?</a></p>
                 </form>
             </div>
         </div>
