--- a/CoreProject/Views/RegisterUser/Index.cshtml
+++ b/CoreProject/Views/RegisterUser/Index.cshtml
@@ -67,7 +67,7 @@
                             <input type="password" class="form-control" asp-for="@Model.Password" name="Password" id="exampleInputPassword1" placeholder="Şifreniz" required="">
                         </div>
                         <br />
-                        <button type="submit" class="btn btn-primary submit mb-4">Kayıt Ol</button>
+                        <button type="submit" class="btn btn-primary submit mb-4"href="/Login/User1">Kayıt Ol</button>
                         <input name="__RequestVerificationToken" type="hidden" value="CfDJ8JZ4gBVrgjlNh-S6-CJE6sFh_nNlzrphBg0pbxdWr1DPIACtQu7P7bpKSB_iBwPPWWL4lfi7jMHf-WWItAdsQrklrEjNOvdyFYfbzqL4vQz_AVSIJkDjXbp6_puUOUWToPb2lxNLjMKVD9TOmQkkPr4">
                     </form>
                 </div>
