--- a/CoreProject/Views/Home/Index.cshtml
+++ b/CoreProject/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
     </div>
 </div>
-
+   //Buraya Döviz kuru çekme eklenecek.
 <div class="row g-5">
     <div class="col-lg-6">
         <div class="blog-item">
