--- a/CoreProject/Views/Shared/_Layout.cshtml
+++ b/CoreProject/Views/Shared/_Layout.cshtml
@@ -27,10 +27,8 @@
     <div>
         <!-- Topbar Start -->
     </div>
-    <!-- Topbar End -->
-    <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <a href="/Kitaplar/Index/" class="navbar-brand p-0">
+        <a href="/Home/Index/" class="navbar-brand p-0">
             <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>E-Kütüphane</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -39,6 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="/Home/Index" class="nav-item nav-link active">Ana Sayfa</a>
+                <a href="/Rezervasyon/Index" class="nav-item nav-link">Rezervasyon</a>
                 <a href="/Kitaplar/Index/" class="nav-item nav-link ">Kitaplar</a>
                 <a href="/Yazarlar/Index/" class="nav-item nav-link">Yazarlar</a>
                 <a href="/Yayınevleri/Index/" class="nav-item nav-link">Yayınevleri</a>
